# EDP

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  divergence.cmd  divergence.ps1  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  stale.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-07-01_05-19-37Z.md
docs/: research_contract.md  research_index.md
docs/theory/: references.md
mcp/: README.md  server.py
ozluk/pr-reviewer/: IDENTITY.md  MEMORY.md  SKILLS.md  SOUL.md  TOOLS.md  WORK.md
research/: README.md
research/divergence_turning_point/: README.md  build_divergence_turning_dashboard.py  build_divergence_turning_dataset.py  build_latest_breadth_snapshot.py  config.json  divergence_config.py  run_daily_divergence_turning.py  run_intraday_divergence_monitor.py  walk_forward_turning_rank.py
research/edp_turning_strategy/: README.md  backtest_edp_turning_strategy.py  config.json  run_edp_turning_strategy_backtest.py
research/market_data/: akshare_cache.py  edp_duckdb_store.py  market_time.py  provider_cache.py  update_market_data.py  update_market_factors.py
research/second_day_low_buy/: OUTPUT_SCHEMA.md  README.md  config.full_market_oos.json  config.json  config.sample_20260629.json  run_full_market_oos_backtest.py  run_low_buy_monitor.py  run_second_day_low_buy.py  strategy_core.py
research/theme_rotation/: README.md  build_edp_daily_dashboard.py  build_latest_breadth_snapshot.py  build_theme_dataset.py  config.json  predict_live_rank.py  run_daily_theme_dashboard.py  walk_forward_rank.py
research/theme_stock_rotation/: README.md  build_edp_theme_stock_dashboard.py  build_theme_stock_dataset.py  config.json  diagnose_eastmoney_api.py  list_theme_names.py  predict_theme_stock_live_rank.py  run_daily_theme_stock_dashboard.py  theme_stock_config.py
skill/: README.md
src/python/: __init__.py  edp_cli.py  probability_engine.py
src/python/edp_cli_core/: __init__.py  app.py  common.py  runtime.py  shell.py
src/python/edp_cli_core/commands/: data.py  divergence.py  low_buy.py  shared.py  strategy.py  theme.py  theme_stock.py
src/types/: protocols.py
tests/python/: test_akshare_cache.py  test_divergence_turning_point.py  test_edp_cli.py  test_edp_turning_strategy.py  test_market_data.py  test_probability_engine.py  test_research_caches.py  test_second_day_low_buy.py
