[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edp-framework"
version = "2.0.0"
description = "EDP - Expectation Domain Perception Method - 期望域感知方法 V2.0 - 通用全域概率态势感知框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nurmamat·Omar", email = "nurmamat@users.noreply.github.com"}
]
keywords = [
    "probability",
    "analysis",
    "expectation-domain",
    "bayesian",
    "flow-analysis",
    "optimization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Education",
    "Typing :: Typed"
]
dependencies = [
    "akshare>=1.16.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.0.0"
]
mcp = [
    "mcp>=0.9.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/ai-nurmamat/EDP"
Documentation = "https://github.com/ai-nurmamat/EDP#readme"
Repository = "https://github.com/ai-nurmamat/EDP.git"
Issues = "https://github.com/ai-nurmamat/EDP/issues"

[project.scripts]
edp = "edp_cli:main"

[tool.setuptools]
package-dir = {"" = "src/python"}
py-modules = ["edp_cli"]

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/python --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.isort]
profile = "black"
line_length = 100
